[package]
name = "cyl_package_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.0"
eframe = "0.28.1"
getset = "0.1.2"
rand = "0.8.5"
regex = "1.10.5"
rfd = "0.14.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
toml = "0.8.16"
walkdir = "2.5.0"

[[bin]]
name = "c2to1_converter"                  # 替换为你的应用程序名称
path = "src/bin/cytus_chart_2to1_tool.rs"
