[package]
name = "cyl_package_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.0"
eframe = "0.28.1"
getset = "0.1.2"
rand = "0.8.5"
regex = "1.10.5"
rfd = "0.14.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
toml = "0.8.16"
walkdir = "2.5.0"
tiny-skia = "0.11.4"
resvg = "0.45.1"
anyhow = "1.0.98"
svg = "0.18.0"


[[bin]]
name = "c2to1_converter"
path = "src/bin/cytus_chart_2to1_tool.rs"
